--- a/src/main/webapp/view/main/maps.html
+++ b/src/main/webapp/view/main/maps.html
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="viewport" content="width=device-width" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
 
 
     <!-- Bootstrap core CSS     -->
